--- a/WalSmart/app/src/main/res/values/strings.xml
+++ b/WalSmart/app/src/main/res/values/strings.xml
@@ -10,16 +10,19 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="start_shopping">Start shopping!</string>
-    <string name="prepared_sets">Prepared Sets</string>
-    <string name="individual_products">Individual Products</string>
+    <string name="prepared_sets">Prepared<br/>\nSets</string>
+    <string name="individual_products">Individual<br/>\nProducts</string>
     <string name="checkout">Checkout</string>
     <string name="back">Back</string>
     <string name="submit_order">Submit Order</string>
     <string name="thanks_for_order">Thank you for placing your order!</string>
     <string name="update_via_phone">We will update you on the order status via the given phone numer.</string>
     <string name="finish_shopping">Finish shopping</string>
-    <string name="total_price">Total price: 200 zl <br /> to be paid at the shop</string>
+    <string name="total_price">Total price: 200 zl <br/>\nto be paid at the shop</string>
     <string name="basket">Basket</string>
+    <string name="phone_number">Phone Number</string>
+    <string name="choose_city">Choose City</string>
+    <string name="choose_shop">Choose Shop</string>
 
     <string-array name="cities_array">
         <item>Warsaw</item>
@@ -57,4 +60,5 @@
         <item>ul. Pilsudskiego 151</item>
         <item>ul. Przybyszewskiego 197a</item>
     </string-array>
+
 </resources>
