--- a/WalSmart/app/src/main/res/values/strings.xml
+++ b/WalSmart/app/src/main/res/values/strings.xml
@@ -23,6 +23,8 @@
     <string name="phone_number">Phone Number</string>
     <string name="choose_city">Choose City</string>
     <string name="choose_shop">Choose Shop</string>
+    <string name="plus">+</string>
+    <string name="minus">-</string>
 
     <string-array name="cities_array">
         <item>Warsaw</item>
