--- a/WalSmart/app/src/main/res/values/strings.xml
+++ b/WalSmart/app/src/main/res/values/strings.xml
@@ -25,6 +25,8 @@
     <string name="choose_shop">Choose Shop</string>
     <string name="plus">+</string>
     <string name="minus">-</string>
+    <string name="products_amount">How many products would you like to add to the basket?</string>
+    <string name="add_to_basket">Add to basket</string>
 
     <string-array name="cities_array">
         <item>Warsaw</item>
