--- a/WalSmart/app/src/main/res/values/strings.xml
+++ b/WalSmart/app/src/main/res/values/strings.xml
@@ -25,8 +25,8 @@
     <string name="choose_shop">Choose Shop</string>
     <string name="plus">+</string>
     <string name="minus">-</string>
-    <string name="products_amount">How many products would you like to add to the basket?</string>
-    <string name="add_to_basket">Add to basket</string>
+    <string name="products_amount">How many products would you like to add?</string>
+    <string name="add_to_basket">Add</string>
     <string name="it_s_smart_to_be_safe">it\'s smart to be safe</string>
     <string name="e_mail">e-mail</string>
     <string name="password">password</string>
