HandwrittenList option added: picture taken and results displayed

--- a/WalSmart/app/src/main/res/values/strings.xml
+++ b/WalSmart/app/src/main/res/values/strings.xml
@@ -45,6 +45,7 @@
                             Version: 1.4.2</string>
     <string name="my_sets">My sets</string>
     <string name="my_orders">My orders</string>
+    <string name="handwritten_list">Handwritten list</string>
 
     <string-array name="cities_array">
         <item>Warsaw</item>
